; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/mv/armada38x/extr_armada38x_rtc.c_mv_rtc_reset.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/mv/armada38x/extr_armada38x_rtc.c_mv_rtc_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mv_rtc_softc = type { i32 }

@RTC_TEST_CONFIG = common dso_local global i32 0, align 4
@RTC_TIME = common dso_local global i32 0, align 4
@RTC_STATUS = common dso_local global i32 0, align 4
@RTC_STATUS_ALARM1_MASK = common dso_local global i32 0, align 4
@RTC_STATUS_ALARM2_MASK = common dso_local global i32 0, align 4
@RTC_IRQ_1_CONFIG = common dso_local global i32 0, align 4
@RTC_IRQ_2_CONFIG = common dso_local global i32 0, align 4
@RTC_ALARM_1 = common dso_local global i32 0, align 4
@RTC_ALARM_2 = common dso_local global i32 0, align 4
@RTC_CLOCK_CORR = common dso_local global i32 0, align 4
@RTC_NOMINAL_TIMING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @mv_rtc_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mv_rtc_reset(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.mv_rtc_softc*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.mv_rtc_softc* @device_get_softc(i32 %4)
  store %struct.mv_rtc_softc* %5, %struct.mv_rtc_softc** %3, align 8
  %6 = load %struct.mv_rtc_softc*, %struct.mv_rtc_softc** %3, align 8
  %7 = load i32, i32* @RTC_TEST_CONFIG, align 4
  %8 = call i32 @mv_rtc_reg_write(%struct.mv_rtc_softc* %6, i32 %7, i32 0)
  %9 = call i32 @DELAY(i32 500000)
  %10 = load %struct.mv_rtc_softc*, %struct.mv_rtc_softc** %3, align 8
  %11 = load i32, i32* @RTC_TIME, align 4
  %12 = call i32 @mv_rtc_reg_write(%struct.mv_rtc_softc* %10, i32 %11, i32 0)
  %13 = call i32 @DELAY(i32 62)
  %14 = load %struct.mv_rtc_softc*, %struct.mv_rtc_softc** %3, align 8
  %15 = load i32, i32* @RTC_STATUS, align 4
  %16 = load i32, i32* @RTC_STATUS_ALARM1_MASK, align 4
  %17 = load i32, i32* @RTC_STATUS_ALARM2_MASK, align 4
  %18 = or i32 %16, %17
  %19 = call i32 @mv_rtc_reg_write(%struct.mv_rtc_softc* %14, i32 %15, i32 %18)
  %20 = call i32 @DELAY(i32 62)
  %21 = load %struct.mv_rtc_softc*, %struct.mv_rtc_softc** %3, align 8
  %22 = load i32, i32* @RTC_IRQ_1_CONFIG, align 4
  %23 = call i32 @mv_rtc_reg_write(%struct.mv_rtc_softc* %21, i32 %22, i32 0)
  %24 = load %struct.mv_rtc_softc*, %struct.mv_rtc_softc** %3, align 8
  %25 = load i32, i32* @RTC_IRQ_2_CONFIG, align 4
  %26 = call i32 @mv_rtc_reg_write(%struct.mv_rtc_softc* %24, i32 %25, i32 0)
  %27 = load %struct.mv_rtc_softc*, %struct.mv_rtc_softc** %3, align 8
  %28 = load i32, i32* @RTC_ALARM_1, align 4
  %29 = call i32 @mv_rtc_reg_write(%struct.mv_rtc_softc* %27, i32 %28, i32 0)
  %30 = load %struct.mv_rtc_softc*, %struct.mv_rtc_softc** %3, align 8
  %31 = load i32, i32* @RTC_ALARM_2, align 4
  %32 = call i32 @mv_rtc_reg_write(%struct.mv_rtc_softc* %30, i32 %31, i32 0)
  %33 = load %struct.mv_rtc_softc*, %struct.mv_rtc_softc** %3, align 8
  %34 = load i32, i32* @RTC_CLOCK_CORR, align 4
  %35 = load i32, i32* @RTC_NOMINAL_TIMING, align 4
  %36 = call i32 @mv_rtc_reg_write(%struct.mv_rtc_softc* %33, i32 %34, i32 %35)
  %37 = load %struct.mv_rtc_softc*, %struct.mv_rtc_softc** %3, align 8
  %38 = load i32, i32* @RTC_TIME, align 4
  %39 = call i32 @mv_rtc_reg_write(%struct.mv_rtc_softc* %37, i32 %38, i32 0)
  %40 = call i32 @DELAY(i32 10)
  %41 = load %struct.mv_rtc_softc*, %struct.mv_rtc_softc** %3, align 8
  %42 = load i32, i32* @RTC_STATUS, align 4
  %43 = load i32, i32* @RTC_STATUS_ALARM1_MASK, align 4
  %44 = load i32, i32* @RTC_STATUS_ALARM2_MASK, align 4
  %45 = or i32 %43, %44
  %46 = call i32 @mv_rtc_reg_write(%struct.mv_rtc_softc* %41, i32 %42, i32 %45)
  %47 = call i32 @DELAY(i32 50)
  ret void
}

declare dso_local %struct.mv_rtc_softc* @device_get_softc(i32) #1

declare dso_local i32 @mv_rtc_reg_write(%struct.mv_rtc_softc*, i32, i32) #1

declare dso_local i32 @DELAY(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
